# csnake

./: CMakeLists.txt  README.md
src/: constants.h  direction.h  food.c  food.h  game.c  game.h  main.c  mathf.c  mathf.h  snake.c  snake.h
